--- a/src/brew-calc.html
+++ b/src/brew-calc.html
@@ -5,7 +5,10 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#111111" />
     <link rel="icon" href="icons/icon-192.png" />
-    <link rel="apple-touch-icon" href="icons/icon-192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Brew Calc" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <title>Foundry Brew Calculator</title>
     <style>
       body {
