--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         border: none;
         background: none;
         color: inherit;
+        -webkit-text-fill-color: currentColor;
         font-size: 1em;
       }
       fieldset {
