--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
       #values input:disabled {
         border: none;
         background: none;
-        color: inherit;
-        -webkit-text-fill-color: currentColor;
+        color: inherit !important;
+        -webkit-text-fill-color: currentColor !important;
+        opacity: 1 !important;
         font-size: 1em;
       }
       fieldset {
