--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
         );
         row-gap: 0.3em;
       }
-      #values > label {
+      #values label {
         justify-self: end;
         text-align: right;
+      }
+      #values input {
+        font-size: 1em;
       }
       #values input:disabled {
         border: none;
@@ -47,7 +50,6 @@
         color: inherit !important;
         -webkit-text-fill-color: currentColor !important;
         opacity: 1 !important;
-        font-size: 1em;
       }
       fieldset {
         border-radius: 0.5em;
