--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
       #values input:disabled {
         border: none;
         background: none;
-        color: inherit !important;
-        -webkit-text-fill-color: currentColor !important;
-        opacity: 1 !important;
+        color: inherit;
+        font-size: 1em;
       }
       fieldset {
         border-radius: 0.5em;
