--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         border: none;
         background: none;
         color: inherit;
+        -webkit-text-fill-color: currentColor;
+        opacity: 1;
         font-size: 1em;
       }
       fieldset {
