--- a/src/brew-calc.html
+++ b/src/brew-calc.html
@@ -37,14 +37,19 @@
         );
         row-gap: 0.3em;
       }
-      #values > label {
+      #values label {
         justify-self: end;
         text-align: right;
+      }
+      #values input {
+        font-size: 1em;
       }
       #values input:disabled {
         border: none;
         background: none;
         color: inherit;
+        -webkit-text-fill-color: currentColor;
+        opacity: 1;
         font-size: 1em;
       }
       fieldset {
