--- a/src/brew-calc.html
+++ b/src/brew-calc.html
@@ -192,11 +192,11 @@
               vector-effect="non-scaling-stroke"
               d="M12.4 0.9C19 1.35 24.3 1.69 23.7 0.9"
             />
-            <path
+            <!-- <path
               stroke-width="3"
               vector-effect="non-scaling-stroke"
               d="M11.7 0.9C20.4 1.59 26.4 1.99 24.7 0.9"
-            />
+            /> -->
           </g>
           <g id="cluster2" stroke="#17C" fill="#17C4">
             <path
